デバイスの導入lbmonthのリンク編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <% if current_page?(root_path) %>
-      <%# <%= render 'partial/header' %> %>
+      <%= render 'partial/header' %>
     <%else%>
       <div></div>
     <%end%>
