--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -22,7 +22,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+  color:#080725;
+ }
 
 /* HTML5 display-role reset for older browsers */
 
@@ -52,4 +54,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+input::-webkit-input-placeholder {
+    color: #999;
+    }
 
