--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -394,6 +394,7 @@ header{
 .statement {
   padding: 220px 96px;
   z-index: 1;
+  margin-top: 4000px;
 	.wrapper {
     width: 72%;
     padding:88px 64px;
@@ -496,7 +497,7 @@ header{
 }
 .register {
   width: 64%;
-    margin: 0 auto;
+    margin: 160px auto 0;
     background-color: #F8F7F5;
     border-radius: 48px;
     padding: 64px 48px 40px;
